# graphics-programming-openGL

./: .gitignore  LICENSE  README.md
Exam1/: examen.c  examen1_4.c
Exam1-2/: CMakeLists.txt  Ex02.c  Utils.c
Exam1-2/shaders/: color.fsh
Exam1-3/: Ex03.c
Exam1-3/include/: Utils.h
Exam1-3/shaders/: star.vsh
Exam1/Shaders/: fractal.fsh  passTroughShader.fsh  vertexPosition.vsh  what.c
Exam1/Utils/: Utils.c  Utils.h
S13_Perpectiva/: sesion14.c
S13_Perpectiva/Shaders/: color.fsh  projection.vsh
S13_Perpectiva/Transforms/: Transforms.c
S13_Perpectiva/Utils/: Utils.h
S14_NavigationII/: sesion14.c
S14_Perpectiva/Utils/: Utils.c
S16/: Iluminacion.c  phong.fsh  s17.c  s18.c
S16/Shaders/: color.fsh  gouraud.vsh  phong.fsh
S16/Transforms/: Transforms.h
Sesion15/: examen1_4.c  sesion15.c
Sesion15/Shaders/: vertexPosition.vsh
Sesion15/Utils/: Utils.c  Utils.h
Transformaciones/: examen.c  practica3.c  practica4.c  sesion11.c  sesion7b.c  sesion9.c
Transformaciones/Shaders/: color.fsh  colorPosition_s7.vsh  color_7b.fsh  modelColor.fsh  projection.vsh  vertexPositionCS.vsh  vertexPosition_practica4.vsh
Transformaciones/Transforms/: Transforms.c  Transforms.h
